# zero2prod

./: Cargo.toml  Dockerfile  README.md  configuration.yaml  sqlx-data.json
.github/workflows/: rust.yml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20220604090054_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
