[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sylvan <sylvan.j.morris@gmail.com>"]
edition = "2021"

[lib]
# This path is the standard, and since we haven't set a name, it defaults to package.main
path = "src/lib.rs"

[[bin]]
# This is an array, so we can have multiple binaries
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}

[dev-dependencies]
reqwest = "0.11"

