[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Sylvan <sylvan@hey.com>"]
edition = "2021"

[lib]
# This path is the standard, and since we haven't set a name, it defaults to package.main
path = "src/lib.rs"

[[bin]]
# This is an array, so we can have multiple binaries
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
config = "0.11"
uuid = { version = "0.8", features = ["v4"] }
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
  # Use actix runtime and rustls as TLS backend
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]

[dev-dependencies]
reqwest = "0.11"
